tests/baselines/reference/parserClassDeclaration12.errors.txt
parserClassDeclaration12.ts(2,4): error TS2394: This overload signature is not compatible with its implementation signature.


==== parserClassDeclaration12.ts (1 errors) ====
    class C {
       constructor();
       ~~~~~~~~~~~
!!! error TS2394: This overload signature is not compatible with its implementation signature.
!!! related TS2750 parserClassDeclaration12.ts:3:4: The implementation signature is declared here.
       constructor(a) { }
    }